@@ -11,6 +11,7 @@
 #define MUL 64
 #define GRADVAL 110
 #define JUST 1
+class box_link;
 class connectable
 {
 	public:
@@ -20,7 +21,25 @@ class connectable
 		virtual QRectF rectPos() const { return QRectF(); }
 		virtual void update_data() {};
 		virtual void update_size() {};
-		virtual int choose_position(const QPointF&p, int id=-1) { Q_ASSERT(false); return 0; };
+		virtual int choose_position(const QPointF&, box_link*) { Q_ASSERT(false); return 0; };
+		virtual int optimize_position(const QPointF& i_o)
+		{
+			QRectF r = rectPos();
+			QPointF l_o1 = r.topLeft() - i_o + QPointF(r.width()/2, r.height()/2);
+			double c_x = l_o1.x() * r.height();
+			double c_y = l_o1.y() * r.width();
+
+			int cand = 0;
+			if (qAbs(c_x) > qAbs(c_y))
+			{
+				cand = (c_x > 0) ? data_link::WEST : data_link::EAST;
+			}
+			else
+			{
+				cand = (c_y > 0) ? data_link::NORTH : data_link::SOUTH;
+			}
+			return cand + 500 * MUL;
+		};
 		virtual QPoint get_point(int position) { return QPoint(0, 0); };
 		data_box *m_oBox;
 		box_chain *m_oChain;
